# zoorl

./: README.md  cdk.json  package-lock.json  package.json  tsconfig.json  zoorl.code-workspace
.devcontainer/: devcontainer.json  post-install.sh
acceptance/: test_url_alias_creation.py
acceptance/support-scripts/: create-test-user.sh  delete-test-user.sh  test-create-url-alias.sh
docs/: aws_sso.py  deployment.md  manual_testing.md
docs/ai-prompts/: architecture-guidelines.md
infrastructure/: .prettierignore  README.md  cdk.json  package-lock.json  package.json
infrastructure/lib/: auth-stack.ts  network-stack.ts  observability-stack.ts  zoorl-application-stack.ts  (+1 more)
lib/: auth-stack.ts  network-stack.ts  observability-stack.ts  stateful-stack.ts  stateless-stack.ts  zoorl-application-stack.ts
src/: README.md  package-lock.json  package.json  tsconfig.json
src/zoorl/: README.md  pyproject.toml  requirements.txt
src/zoorl/tests/adapters/: __init__.py  test_dynamodb_model.py
src/zoorl/tests/core/: test_utils.py
src/zoorl/tests/core/usecases/: __init__.py  test_create_url_hash.py  test_read_url_hash.py  test_read_url_hash_handler.py
src/zoorl/zoorl/: __init__.py
src/zoorl/zoorl/adapters/: __init__.py  create_url_hash_handler.py  dynamodb_model.py  http_response_codes.py  lambda_handler.py  lambda_support.py  read_url_hash_handler.py  redirect_handler.py
src/zoorl/zoorl/core/: model.py  utils.py
src/zoorl/zoorl/core/usecases/: __init__.py  create_url_hash.py  read_url_hash.py
src/zoorl/zoorl/ports/: repository.py
test/: zoorl-app.test.ts
(+39 files in other folders)
