[tool.poetry]
name = "zoorl"  # no hyphens `-`!
version = "0.1.0"
description = "Zoorl - Create URL Hash function"
authors = ["Mario Scalas <mario.scalas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.29.1"
boto3-stubs = {extras = ["apigateway", "dynamodb", "s3"], version = "^1.24.75"}

[tool.poetry.dev-dependencies]
# Boto3 is already provided by AWS container runtime
boto3 = "^1.24.74"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
moto = {extras = ["dynamodb", "s3"], version = "^4.0.3"}
#boto3-stubs = {extras = ["apigateway", "dynamodb", "s3"], version = "^1.24.75"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
